Fix spacing for not-found panel

--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -299,5 +299,5 @@ svg text {
 }
 
 .not-found {
-    margin-top: 20px;
+    margin-top: 6%;
 }
